--- a/designapp1/templates/add_course.html
+++ b/designapp1/templates/add_course.html
@@ -24,7 +24,7 @@
                     <div class="mt-5 form-group row align-items-center">
                         <label for="course-name-field" class="col-12 col-md-4 col-form-label">Course name</label>
                         <div class="col-12 col-md-8 align-middle">
-                            <input type="password" name="password" class="form-control" id="course-name-field"
+                            <input type="text" name="course-name-field" class="form-control" id="course-name-field"
                                    required="">
                             <div class="invalid-feedback"></div>
                         </div>
@@ -33,7 +33,7 @@
                     <div class="form-group row align-items-center">
                         <label for="course-info-field" class="col-12 col-md-4 col-form-label">Course info</label>
                         <div class="col-12 col-md-8">
-                            <input type="password" name="password" class="form-control" id="course-info-field"
+                            <input type="text" name="course-info-field" class="form-control" id="course-info-field"
                                    required="">
                             <div class="invalid-feedback"></div>
                         </div>
@@ -42,8 +42,8 @@
                         <label for="course-fid-field" class="col-12 col-md-4 col-form-label">Course FID
                             (optional) TODO: make into integer only field</label>
                         <div class="col-12 col-md-8">
-                            <input type="password" name="password" class="form-control" id="course-fid-field"
-                                   required="">
+                            <input type="text" name="course-fid-field" class="form-control" id="course-fid-field"
+                                   >
                             <div class="invalid-feedback"></div>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                         <label for="active-field" class="col-12 col-md-4 col-form-label">Active? TODO: make into
                             radio button</label>
                         <div class="col-12 col-md-8">
-                            <input type="password" name="password" class="form-control" id="active-field"
+                            <input type="text" name="active-field" class="form-control" id="active-field"
                                    required="">
                             <div class="invalid-feedback"></div>
                         </div>
@@ -59,8 +59,8 @@
                     <div class="form-group row align-items-center mb-4">
                         <label for="schema-field" class="col-12 col-md-4 col-form-label">Schema (optional). TODO: make into large input</label>
                         <div class="col-12 col-md-8">
-                            <input type="password" name="password" class="form-control" id="schema-field"
-                                   required="">
+                            <input type="text" name="schema-field" class="form-control" id="schema-field"
+                                   >
                             <div class="invalid-feedback"></div>
                         </div>
                     </div>
