--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -8356,8 +8356,77 @@ table {
   border-collapse: collapse;
   width: 100%; }
 
-th {
-  background: #eee; }
+/* -------------------------------------------------------- */
+/* "Bootstrap V4 Simple Checkbox Switch - No Js" */
+/* by pradeep330 */
+/* https://bootsnipp.com/snippets/GaxR2 */
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px; }
+  .switch input {
+    display: none; }
+
+/* Hide default HTML checkbox */
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s; }
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s; }
+
+input.default:checked + .slider {
+  background-color: #444; }
+
+input.primary:checked + .slider {
+  background-color: #007bff; }
+
+input.success:checked + .slider {
+  background-color: #28a745; }
+
+input.info:checked + .slider {
+  background-color: #17a2b8; }
+
+input.warning:checked + .slider {
+  background-color: #ffc107; }
+
+input.danger:checked + .slider {
+  background-color: #dc3545; }
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3; }
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px); }
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px; }
+
+.slider.round:before {
+  border-radius: 50%; }
+
+/* -------------------------------------------------------- */
 
 
 /*# sourceMappingURL=main.css.map*/
