change password button now works; fixed table header color; course FID field description

--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -85,7 +85,7 @@
                             <div class="overflow-auto tableFixHead" style="height: 800px;">
                                 <table id="user_table"
                                        class="table table-sm table-hover table-fixed table-borderless table-striped">
-                                    <thead>
+                                    <thead class="bg-dark text-light">
                                     <tr>
                                         <th class="th-sm" scope="col">#</th>
                                         <th class="th-sm" scope="col">Role</th>
