--- a/designapp1/templates/add_course.html
+++ b/designapp1/templates/add_course.html
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                     <div class="form-group row align-items-center mb-4">
-                        <label for="course-fid-field" class="col-12 col-md-4 col-form-label">Course FID
+                        <label for="course-fid-field" class="col-12 col-md-4 col-form-label">Course owner ID
                             (optional)</label>
                         <div class="col-12 col-md-8">
                             <input type="number" name="course-fid-field" class="form-control" id="course-fid-field"
