--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -75,12 +75,12 @@
     container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
 
 
-                    <div class="row">
+                    <div class="row d-flex flex-column">
                         <div class="col-12"><h3>Users</h3></div>
                         <div class="col-12">
                             <hr>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 d-flex flex-column flex-grow-1">
                             <input class="form-control mb-3" type="text" id="search" placeholder="Search...">
                             <div class="overflow-auto tableFixHead" style="height: 300px;">
                                 <table id="user_table"
