--- a/designapp1/templates/student_view.html
+++ b/designapp1/templates/student_view.html
@@ -9,11 +9,11 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="vh-100 d-flex flex-column">
     {% include 'navbar.html' %}
-    <div class="container-fluid py-3 py-md-5">
-        <div class="row px-0 px-md-5 center-block flex-row">
-            <div class="col-12 col-md-4">
+    <div class="container-fluid d-flex py-3 py-md-5 flex-grow-1">
+        <div class="row px-0 px-md-5 center-block flex-row flex-grow-1">
+            <div class="col-12 col-md-4 d-flex">
                 <div class=" center-block container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
                     <!-- Website title -->
                     <h2>Course list</h2>
@@ -73,4 +73,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
