--- a/designapp1/templates/change_password.html
+++ b/designapp1/templates/change_password.html
@@ -10,8 +10,8 @@
 
 
 {% block content %}
+<div class="vh-100 d-flex flex-column">
     {% include 'navbar.html' %}
-
     <div class="container-fluid py-3 py-md-5">
         <div class="row">
             <div class="col-11 col-md-7 col-xl-4 center-block
@@ -58,4 +58,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
