removed admin.ts

--- a/designapp1/templates/edit_users.html
+++ b/designapp1/templates/edit_users.html
@@ -12,7 +12,7 @@
 
     <!-- <script defer type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script> -->
 
-    <script defer src="/static/scripts/admin.js"></script>
+    <script defer src="/static/scripts/user.js"></script>
 {#    <script defer src="/static/scripts/user.js"></script>#}
     <!-- TODO uncomment user.js here -->
 
