--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -8,17 +8,17 @@
     <div class="vh-100 d-flex flex-column">
     {% include 'navbar.html' %}
     <div class="container-fluid py-3 py-md-5">
-        <div class="row">
-            <div class="col-11 col-md-7 col-lg-5 center-block
-    container border border-dark rounded-lg shadow-lg bg-white">
+{#        <div class="row">#}
+{#            <div class="col-11 col-md-7 col-lg-5 center-block#}
+{#    container border border-dark rounded-lg shadow-lg bg-white">#}
                 <!-- Register Form -->
 {#                <p class="text-left small mt-2 mb-0"><a href="/" id="homepage-ref">Back to homepage</a></p>#}
                 <div class="p-3" id="content"> {# actual content #}
-                    <p class="text-center h3">Please select an option from the links above</p>
+                    <p class="text-center h1">Please select an option from the links above</p>
                     <div class="align-items-center center-block " id="alert-div"></div>
                 </div>
-            </div>
-        </div>
+{#            </div>#}
+{#        </div>#}
     </div>
 </div>
 {% endblock %}
