--- a/designapp1/templates/change_password.html
+++ b/designapp1/templates/change_password.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>Register</title>
+    <title>Change password</title>
 {% endblock %}
 
 {% block scripts %}
