--- a/designapp1/templates/edit_courses.html
+++ b/designapp1/templates/edit_courses.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>Register</title>
+    <title>Edit courses</title>
 {% endblock %}
 
 {% block scripts %}
