--- a/designapp1/templates/edit_users.html
+++ b/designapp1/templates/edit_users.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title id="page-title"></title>
+    <title id="page-title">Edit users</title>
 {% endblock %}
 
 {% block scripts %}
