--- a/designapp1/templates/student_view.html
+++ b/designapp1/templates/student_view.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>Student home</title>
+    <title>Student view</title>
 {% endblock %}
 
 {% block scripts %}
