--- a/designapp1/templates/navbar.html
+++ b/designapp1/templates/navbar.html
@@ -39,7 +39,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="navbarDropdown">
                     {% if role == 0 or role == 1 %}
-                    <a class="dropdown-item" id="navbar-dump-all-databases" href="#">Dump all databases</a>
+                    <a class="dropdown-item text-danger" id="navbar-dump-all-databases" href="#">Get dump of all databases</a>
 
                     <div class="dropdown-divider" id="navbar-options-dropdown-divider"></div>
                     {% endif %}
