inactive courses and such is all nice

--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -24,6 +24,17 @@ a
     font-weight: bold
     &.active
       background-color: #4ecf86 !important
+    &.inactive-course
+      background-color: #a9cfbf !important
+      &.active
+          background-color: #3b955f !important
+
+.nav-link
+  &.inactive-course
+    background-color: #f2f2f2
+    &.active
+        background-color: lightgray !important
+
 
 #alert-div
   //@extend .row
