--- a/frontend/css/change_password.css
+++ b/frontend/css/change_password.css
@@ -8346,6 +8346,15 @@ a {
   font-weight: bold; }
   .nav-link.have-credentials-nav.active {
     background-color: #4ecf86 !important; }
+  .nav-link.have-credentials-nav.inactive-course {
+    background-color: #a9cfbf !important; }
+    .nav-link.have-credentials-nav.inactive-course.active {
+      background-color: #3b955f !important; }
+
+.nav-link.inactive-course {
+  background-color: #f2f2f2; }
+  .nav-link.inactive-course.active {
+    background-color: lightgray !important; }
 
 .tableFixHead thead th {
   position: sticky;
