add schema now has 3 options

--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -19,7 +19,7 @@ a
   background-color: $cyan !important
 
 .nav-link
-  &.have-credentials-nav
+  &.green-nav
     background-color: #d0ffcd
     font-weight: bold
     &.active
