--- a/designapp1/templates/edit_courses.html
+++ b/designapp1/templates/edit_courses.html
@@ -18,6 +18,8 @@
                     <div class=" center-block container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
                         <!-- Website title -->
                         <h2>Course list</h2>
+                        <a data-toggle="pill" href="#new-course-pane">Add course</a>
+
                         <hr/>
                         <div class="overflow-auto" style="height: 300px;">
                             <div class="nav flex-column nav-pills" id="courses-nav" role="tablist"></div>
@@ -34,15 +36,16 @@
                             <div class="tab-pane active m-5"><h1>Please select a course</h1></div>
 
                             <div class="tab-pane" id="new-course-pane">
-                                <form class="form-horizontal" id="content"> {# actual content #}
+                                <form class="form-horizontal" id="new-course-content"> {# actual content #}
                                     <p class="text-center h4 mb-4">Add course</p>
                                     <hr/>
-                                    <div class="mt-5 form-group row align-items-center">
-                                        <label for="course-name-field" class="col-12 col-md-4 col-form-label">Course
+
+                                    <div class="form-group row align-items-center">
+                                        <label for="new-course-name-field" class="col-12 col-md-4 col-form-label">Course
                                             name</label>
                                         <div class="col-12 col-md-8 align-middle">
                                             <input type="text" name="course-name-field" class="form-control"
-                                                   id="course-name-field"
+                                                   id="new-course-name-field"
                                                    required="">
                                             <div class="invalid-feedback"></div>
                                         </div>
@@ -53,7 +56,7 @@
                                             info</label>
                                         <div class="col-12 col-md-8">
                                             <input type="text" name="course-info-field" class="form-control"
-                                                   id="course-info-field"
+                                                   id="new-course-info-field"
                                                    required="">
                                             <div class="invalid-feedback"></div>
                                         </div>
@@ -64,7 +67,7 @@
                                             (optional)</label>
                                         <div class="col-12 col-md-8">
                                             <input type="number" name="course-fid-field" class="form-control"
-                                                   id="course-fid-field"
+                                                   id="new-course-fid-field"
                                                    oninput="this.value=this.value.replace(/[^0-9]/g,'');">
 
                                             <div class="invalid-feedback"></div>
@@ -74,7 +77,7 @@
                                         <label for="active-field" class="col-12 col-md-4 col-form-label">Active?</label>
                                         <div class="col-12 col-md-8">
                                             <label class="switch">
-                                                <input type="checkbox" class="info" id="active-field"
+                                                <input type="checkbox" class="info" id="new-active-field"
                                                        name="active-field" checked>
                                                 <span class="slider round"></span>
                                             </label>
@@ -86,34 +89,182 @@
 
 
                                     <div class="form-group row align-items-center mb-4">
-                                        <label for="schema-field" class="col-12 col-md-4 col-form-label">Schema
-                                            (optional)</label>
+                                        <label for="new-schema-radio" class="col-12 col-md-4 col-form-label">Add schema?</label>
+                                        <div class="col-12 col-md-8 btn-group btn-group-toggle" data-toggle="buttons">
+                                            <label class="btn btn-secondary active">
+                                                <input type="radio" name="options" id="new-schema-radio-none"
+                                                       autocomplete="off"
+                                                       checked> No
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="options" id="new-schema-radio-textarea"
+                                                       autocomplete="off">
+                                                Via text field
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="options" id="new-schema-radio-upload"
+                                                       autocomplete="off">
+                                                Via file upload
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="options" id="new-schema-radio-transfer"
+                                                       autocomplete="off">
+                                                Via schema transfer
+                                            </label>
+                                        </div>
+                                        <div class="invalid-feedback"></div>
+
+                                    </div>
+
+
+                                    <div class="form-group row align-items-center mb-4">
+                                        <label for="new-schema-radio" class="col-12 col-md-4 col-form-label">Schema
+                                            text</label>
                                         <div class="col-12 col-md-8">
-                              <textarea name="schema-field" class="form-control" id="schema-field"
+                              <textarea name="schema-field" class="form-control" id="new-schema-textarea"
                               ></textarea>
                                             <div class="invalid-feedback"></div>
                                         </div>
                                     </div>
+
+
+                                    <div class="form-group row align-items-center mb-4">
+                                        <label for="new-schema-upload" class="col-12 col-md-4 col-form-label">Schema
+                                            upload</label>
+                                        <div class="col-12 col-md-8">
+                                            <input type="file" id="new-schema-upload"/>
+
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row align-items-center mb-4">
+                                        <label for="new-schema-transfer" class="col-12 col-md-4 col-form-label">Schema
+                                            transfer</label>
+                                        <div class="col-12 col-md-8">
+                                            <select class="form-control" id="new-schema-transfer">
+                                                <option disabled selected value="0">Select a database</option>
+                                            </select>
+
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+                                    </div>
+                                    {#                        <div class="form-group col-md-6">#}
+                                    {#                            <label for="courses-dropdown">Select a course</label>#}
+                                    {#                            <select class="form-control" id="courses-dropdown">#}
+                                    {#                                <option disabled selected value="0"> select an option</option>#}
+                                    {#                            </select>#}
+                                    {#                        </div>#}
+
+
                                     <hr>
                                     <button type="submit" class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3"
-                                            id="add-course-button">Add course
+                                            id="new-course-button">Add course
                                     </button>
-                                    <div class="mt-5 align-items-center center-block " id="alert-div"></div>
                                 </form>
                             </div>
 
-                            <div class="tab-pane" id="existing-course-pane">
-{#                                <p class="h2" id="have-credentials-coursename">Have credentials coursename</p>#}
-{#                                <p class="text-center small mb-2" id="have-credentials-courseinfo">Have credentials#}
-{#                                    courseinfo</p>#}
-{#                                <p id="have-credentials-status" class="text-center text-success">You already have#}
-{#                                    credentials for this course</p>#}
-{#                                <hr>#}
-{#                                <p class="text-center mb-2" id="have-credentials-database-info">#}
-{#                                    To use the database, connect to {{ server_address }} using these credentials:#}
-{#                                </p>#}
-{#                                <div id="credentials-div">Credentials default page</div>#}
 
+                            <div class="tab-pane" id="existing-course-pane">
+                                <form class="form-horizontal" id="existing-course-content"> {# actual content #}
+                                    <p class="text-center h4 mb-4">Add course</p>
+                                    <hr/>
+                                    <div class="form-group row align-items-center">
+                                        <label for="course-id-field" class="col-12 col-md-4 col-form-label">Course
+                                            ID</label>
+                                        <div class="col-12 col-md-8 align-middle">
+                                            <input type="number" class="form-control"
+                                                   id="existing-course-id-field" disabled
+                                            >
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+
+                                    </div>
+                                    <div class="form-group row align-items-center">
+                                        <label for="course-name-field" class="col-12 col-md-4 col-form-label">Course
+                                            name</label>
+                                        <div class="col-12 col-md-8 align-middle">
+                                            <input type="text" name="course-name-field" class="form-control"
+                                                   id="existing-course-name-field"
+                                                   required="">
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+
+                                    </div>
+                                    <div class="form-group row align-items-center">
+                                        <label for="course-info-field" class="col-12 col-md-4 col-form-label">Course
+                                            info</label>
+                                        <div class="col-12 col-md-8">
+                                            <input type="text" name="course-info-field" class="form-control"
+                                                   id="existing-course-info-field"
+                                                   required="">
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row align-items-center mb-4">
+                                        <label for="course-fid-field" class="col-12 col-md-4 col-form-label">Course
+                                            owner ID
+                                            (optional)</label>
+                                        <div class="col-12 col-md-8">
+                                            <input type="number" name="course-fid-field" class="form-control"
+                                                   id="existing-course-fid-field"
+                                                   oninput="this.value=this.value.replace(/[^0-9]/g,'');">
+
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row align-items-center mb-4">
+                                        <label for="active-field" class="col-12 col-md-4 col-form-label">Active?</label>
+                                        <div class="col-12 col-md-8">
+                                            <label class="switch">
+                                                <input type="checkbox" class="info" id="existing-active-field"
+                                                       name="active-field" checked>
+                                                <span class="slider round"></span>
+                                            </label>
+                                            <div class="invalid-feedback"></div>
+
+
+                                        </div>
+                                    </div>
+
+                                    <h3>TODO add radio buttons here</h3>
+
+                                    <div class="form-group row align-items-center mb-4">
+                                        <label for="existing-schema-textarea" class="col-12 col-md-4 col-form-label">Schema
+                                            (optional)</label>
+                                        <div class="col-12 col-md-8">
+                              <textarea name="schema-field" class="form-control" id="existing-schema-textarea"
+                              ></textarea>
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row align-items-center mb-4">
+                                        <label for="existing-schema-upload" class="col-12 col-md-4 col-form-label">Schema
+                                            (optional)</label>
+                                        <div class="col-12 col-md-8">
+                                            <input type="file" id="existing-schema-upload"/>
+
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row align-items-center mb-4">
+                                        <label for="existing-schema-upload" class="col-12 col-md-4 col-form-label">Schema
+                                            (optional)</label>
+                                        <div class="col-12 col-md-8">
+                                            <input type="file" id="existing-schema-upload"/>
+
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+                                    </div>
+
+
+                                    <hr>
+                                    <button type="submit" class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3"
+                                            id="existing-course-button">Add course
+                                    </button>
+                                </form>
                             </div>
 
                         </div>
