--- a/frontend/css/student_view.css
+++ b/frontend/css/student_view.css
@@ -8341,14 +8341,14 @@ a {
 .bootstrap-select .dropdown-item.active, .dropdown-item:active, .nav-link.active {
   background-color: #17a2b8 !important; }
 
-.nav-link.have-credentials-nav {
+.nav-link.green-nav {
   background-color: #d0ffcd;
   font-weight: bold; }
-  .nav-link.have-credentials-nav.active {
+  .nav-link.green-nav.active {
     background-color: #4ecf86 !important; }
-  .nav-link.have-credentials-nav.inactive-course {
+  .nav-link.green-nav.inactive-course {
     background-color: #a9cfbf !important; }
-    .nav-link.have-credentials-nav.inactive-course.active {
+    .nav-link.green-nav.inactive-course.active {
       background-color: #3b955f !important; }
 
 .nav-link.inactive-course {
