currently implementing schema transfer and file upload

--- a/designapp1/templates/edit_courses.html
+++ b/designapp1/templates/edit_courses.html
@@ -118,7 +118,7 @@
 
 
                                     <div class="form-group row align-items-center mb-4">
-                                        <label for="new-schema-radio" class="col-12 col-md-4 col-form-label">Schema
+                                        <label for="new-schema-textarea" class="col-12 col-md-4 col-form-label">Schema
                                             text</label>
                                         <div class="col-12 col-md-8">
                               <textarea name="schema-field" class="form-control" id="new-schema-textarea"
